# DFPS-2.0-ENGINE

./: .gitignore  DFPS Planner — Resume & Continuity.txt  README.md  add_log.txt  jest.config.cjs  package-lock.json  package.json  planner_migration_protocol.md  pyproject.toml
__tests__/: queue.integration.test.mjs
docs/future/: pluginProfillingSystem.md
files/: dfps.proto  grpc-client.mjs  grpc-server.mjs
src/dfps_2_0_engine/: __init__.py
src/local-coordinator/componentDTO/: dagBuilderJob.json  fullContext.json  fullJob.json
src/local-coordinator/core/dag-builder/: dagBuild.mjs  index.mjs
src/local-coordinator/core/planner/: Gateway.py  __init__.py  compilerPipeline.py  cpSatBuilder.py  cpSatSolver.py  dagAnalyzer.py  elastic_dispatcher.py  pruning.py  resourceCost.py  resourceCostScore.py  searchSpaceReduction.py  temporalCompiler.py
src/local-coordinator/core/pool-manager/: index.mjs  workerActions.mjs  (+2 more)
src/local-coordinator/infrastructure/: index.mjs  wal.mjs  workerBatcher.mjs
src/local-coordinator/runtime/: routing.mjs  runtimeOchestrator.mjs  runtimeTaskManger.mjs  ss.txt  taskDispatcher.mjs
src/local-coordinator/utils/: contextExtractor.mjs  dagExtractor.mjs  index.mjs  indexExtractor.mjs  normalization.mjs
src/main-coordinator/core/: agingEngine.mjs  mc-jobRegistry.mjs  mc-queue.mjs  queueMetrics.mjs  queueOrchestrator.mjs
src/main-coordinator/infrastucture/: persistenceManager.mjs
src/profilePlugin/: data.txt
src/profilePlugin/schema/: pluginOptput.md  plugininput.json  pluginruntime.md
src/profilePlugin/storage/: schema.sql
(+133 files in other folders)
